Fix header logo stretching

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -10,9 +10,13 @@
 }
 
 // Site title
-.site-desktop-title {
+.site-desktop-title, .site-mobile-title {
   .custom-logo {
     max-height: 75px;
+  }
+
+  img {
+    width: auto;
   }
 
   a {
